Fix spacing in text animal disease
MT-760

--- a/src/scss/components/_animal-disease.scss
+++ b/src/scss/components/_animal-disease.scss
@@ -1,10 +1,8 @@
 @use '../theme' as *;
 
 .animal-disease {
-  .intro {
+  .text {
     margin-top: $spacer-small;
-    font-size: $font-size-body;
-    font-weight: $font-weight-normal;
   }
   .disclosure {
     margin-top: $spacer-small;
